docs(shipping): move shipping endpoint to be a sub route for addresses
